k8s/apps/app3/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: sso-pilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: sso-app3:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
