k8s/apps/app3/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: sso-pilot
spec:
  selector:
    app: app3
  ports:
    - port: 8080
      targetPort: 8080
